sfdx-source/force-app/main/default/objects/OIAttributesConfig__mdt/OIAttributesConfig__mdt.object-meta.xml
<CustomObject>
    <description>LEM-13227 : Onboarding Inputs Epic</description>
    <label>OIAttributesConfig</label>
    <pluralLabel>OIAttributesConfigs</pluralLabel>
</CustomObject>