sfdx-source/force-app/main/default/objects/OIAttributesConfig__mdt/fields/Attribute_HelpText__c.field-meta.xml
<CustomField>
    <fullName>Attribute_HelpText__c</fullName>
    <description>LEM-16228: It is used to store Help Text for OI Attributes.</description>
    <inlineHelpText>It is used to provide help text for Attributes or Fields</inlineHelpText>
    <label>Attribute HelpText</label>
    <type>TextArea</type>
</CustomField>