sfdx-source/force-app/main/default/objects/OIAttributesConfig__mdt/fields/Attribute_Order__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Order__c</fullName>
    <label>Attribute Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>