sfdx-source/force-app/main/default/objects/OIAttributesConfig__mdt/fields/Auto_Applied_To_All_Store__c.field-meta.xml
<CustomField>
    <fullName>Auto_Applied_To_All_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Applied To All Store?</label>
    <type>Checkbox</type>
</CustomField>