sfdx-source/force-app/main/default/objects/OIAttributesConfig__mdt/fields/Is_PrePopulated__c.field-meta.xml
<CustomField>
    <fullName>Is_PrePopulated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PrePopulated?</label>
    <type>Checkbox</type>
</CustomField>