sfdx-source/force-app/main/default/objects/OIAttributesConfig__mdt/fields/OIAttribute__c.field-meta.xml
<CustomField>
    <fullName>OIAttribute__c</fullName>
    <label>OIAttribute</label>
    <referenceTo>OIAttributes__mdt</referenceTo>
    <relationshipLabel>OIAttributesConfigs</relationshipLabel>
    <relationshipName>OIAttributesConfigs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>