sfdx-source/force-app/main/default/objects/OIAttributesConfig__mdt/fields/OIAttributesValidation__c.field-meta.xml
<CustomField>
    <fullName>OIAttributesValidation__c</fullName>
    <label>OIAttributesValidation</label>
    <referenceTo>OIAttributesValidation__mdt</referenceTo>
    <relationshipLabel>OIAttributesConfigs</relationshipLabel>
    <relationshipName>OIAttributesConfigs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>