sfdx-source/force-app/main/default/objects/OIAttributesConfig__mdt/fields/OISectionCondition__c.field-meta.xml
<CustomField>
    <fullName>OISectionCondition__c</fullName>
    <label>OISectionCondition</label>
    <referenceTo>OISectionCondition__mdt</referenceTo>
    <relationshipLabel>OIAttributesConfigs</relationshipLabel>
    <relationshipName>OIAttributesConfigs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>