sfdx-source/force-app/main/default/objects/OIAttributesConfig__mdt/listViews/All_Column.listView-meta.xml
<ListView>
    <fullName>All_Column</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>OISectionCondition__c</columns>
    <columns>OIAttribute__c</columns>
    <columns>OIAttributesValidation__c</columns>
    <columns>Attribute_Order__c</columns>
    <columns>Is_Required__c</columns>
    <columns>Is_PrePopulated__c</columns>
    <columns>Auto_Applied_To_All_Store__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Column</label>
</ListView>